.ci/k8sd/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: k8sd

spec:
  selector:
    matchLabels:
      app: k8sd
  replicas: 2
  template:
    metadata:
      labels:
        app: k8sd
    spec:
      containers:
        - name: nginx-example
          image: nginx
          ports:
            - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  selector:
    matchLabels:
      run: my-nginx
  replicas: 2
  template:
    metadata:
      labels:
        run: my-nginx
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80
