.ci/k8sd/service.yml
apiVersion: v1
kind: Service

metadata:
  name: k8sd
  namespace: k8sd
  labels:
    app: k8sd

spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
     app: k8sd

---

apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  labels:
    run: my-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: my-nginx
