.ci/k8sd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: k8sd
  labels:
    app: k8sd

spec:
  rules:
    - host: dev.k8sd.io
      http:
        paths:
          - path: /my-nginx
            pathType: Prefix
            backend:
              service:
                name: my-nginx
                port:
                  name: http

          - path: /k8sd
            pathType: Prefix
            backend:
              service:
                name: k8sd
                port:
                  name: http
